<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/customer_name_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        android:inputType="textCapWords"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/text_toppings" />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="10dp"/>

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:paddingLeft="10dp"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/text_quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="1"
            android:id="@+id/quantity_text_view"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_order"
        android:onClick="submitOrder"/>


</LinearLayout>
